# downloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
yt_dl/data/: __init__.py  download.py
yt_dl/download/: __init__.py  model.py  yt_download.py
yt_dl/redis_storage/: __init__.py  redis.py
yt_dl/settings/: settings.py
yt_dl/web/: main.py
yt_dl/web/templates/: downloads.html  index.html
