[tool.poetry]
name = "downloader"
version = "0.1.0"
description = ""
authors = ["Uwe Jäger <uwe.jaeger@valiton.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
fastapi = "^0.109.0"
python-multipart = "^0.0.6"
yt-dlp = "^2023.12.30"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
